menu visibility settings tweeked. Edge bugs fixed

--- a/stylesheets/less/modal.less
+++ b/stylesheets/less/modal.less
@@ -18,10 +18,8 @@
 	width: 400px;
 	height: 400px;
 	position: absolute;
-	left: 50%;
-	top: 50%;
-	left: 10%;
-	top: 10%;
+	right: 8%;
+	top: 12%;
 	z-index: 99;
     ::-webkit-scrollbar {
         overflow: visible;
